2020-04-01 Jan Kotanski <jan.kotanski@desy.de>
	* add polling interval for Parameters tool to the configuration
	* tagged as 2.41.1

2020-03-31 Jan Kotanski <jan.kotanski@desy.de>
	* add Parameters tool
	* tagged as 2.41.0

2020-03-23 Jan Kotanski <jan.kotanski@desy.de>
	* fix auto levels when histogram is off
	* fix for [un-]starred icons when fromTheme icons are not available
	* tagged as 2.40.3

2020-03-20 Jan Kotanski <jan.kotanski@desy.de>
	* fix issue for pyqt4
	* fixes for image source combobox and adding image sources
	* tagged as 2.40.2

2020-03-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix for configuration state for py3
	* tagged as 2.40.1

2020-03-19 Jan Kotanski <jan.kotanski@desy.de>
	* add support for reading LavueState in LavueController
	* tagged as 2.40.0

2020-03-13 Jan Kotanski <jan.kotanski@desy.de>
	* add PixelSizeX and PixelSizeY to LavueController
	* add support for changing logging level from LavueController
	* catch exceptions from paint method
	* tagged as 2.39.0

2020-03-12 Jan Kotanski <jan.kotanski@desy.de>
	* remove callback on disconnect Tango Events
	* tagged as 2.38.2

2020-03-10 Jan Kotanski <jan.kotanski@desy.de>
	* fix deadlock problem in  unsubscribe tango events
	* tagged as 2.38.1

2020-03-05 Jan Kotanski <jan.kotanski@desy.de>
	* add relative float rotation for image sources
	* tagged as 2.38.0

2020-03-03 Jan Kotanski <jan.kotanski@desy.de>
	* add timeout to HTTPsource back
	* do not interrupt  HTTP connection on 'Image not available'
	* tagged as 2.37.2

2020-03-01 Jan Kotanski <jan.kotanski@desy.de>
	* revert applying timeout for HTTP
	* tagged as 2.37.1

2020-02-28 Jan Kotanski <jan.kotanski@desy.de>
	* add relative transformations for image sources
	* skip execute closeEvent twice
	* tagged as 2.37.0

2020-02-27 Jan Kotanski <jan.kotanski@desy.de>
	* fix for loading Nexus files with unknown extension
	* add @debugmethod statement back
	* add timeout tho HTTPsource
	* tagged as 2.36.1
